# nacp

./: .gitignore  README.md  cutlass_mix.cu  m-n-4096-flops.csv  m-n-4096-time.csv  mat-mul-fp32-cublas.cu  mat-mul-fp32-cublas.cu.hip  mat-mul-fp32.cu  mat-mul-fp32.cu.hip  mat-mul-tile-fp32.cu  mat-mul-tile-fp32.cu.hip  mat-mul-tile.cu  mat-mul.cu  mat-mul.cu.hip  mnist-a100.txt  mnist-h100.txt  mnist-mi250.txt  mnist_mlp.py  script-k-4096-flops.sh  script-k-4096-time.sh  script-m-n-4096-flops.sh  script-m-n-4096-time.sh
benchmark-data/: k-4096-flops-tile-256x128.csv  k-4096-flops.csv  k-4096-time-tile-256x128.csv  k-4096-time.csv  k_runtimes.csv  m-n-4096-flops-tile-256x128.csv  m-n-4096-time-tile-256x128.csv  m_eq_n_runtimes.csv
project/: CMakeLists.txt  runner.cu  script.sh  util.h
project/kernels/: basic_tiling.cuh  cublas-mix.cuh  cutlass-mix.cuh  wmma-mix.cuh
wmma/: cublas-mix.cu  test-with-check.cu  test.cu  wmma-threadblock-nested.cu  wmma.cu
